# cellsim-cli

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  README.md  conanfile.txt  configure_dev.bash  coverage.xml  imgui.ini  ubuntu_conan.profile
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.docker/: Dockerfile  config.json
.github/workflows/: ci.yml
config/: CMakeLists.txt  config.hpp.in
include/: CMakeLists.txt  app.hpp
include/cellmap/: CMakeLists.txt  cellmap.hpp  texture_backed_framebuffer.hpp
include/cli_emulator/: CMakeLists.txt  cellsim_cli_emulator.hpp  cli_emulator.hpp
include/imgui/: CMakeLists.txt  imgui_utils.hpp
include/renderer/: CMakeLists.txt  renderer.hpp
include/rules/: CMakeLists.txt  rule.hpp  rule_config.hpp  rule_info_window.hpp
include/shaders/: CMakeLists.txt  shaders.hpp
include/utils/: vecs.hpp
include/window/: CMakeLists.txt  window.hpp
res/include/: CMakeLists.txt
res/include/imgui_bindings/: CMakeLists.txt
res/src/: CMakeLists.txt
res/src/imgui_bindings/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
shaders/: CMakeLists.txt  Makefile  build.ninja  shconfig.hpp
shaders/src/1D_binary/: shader.comp
shaders/src/1D_totalistic/: shader.comp
shaders/src/2D_cyclic/: shader.comp
shaders/src/2D_life/: shader.comp
shaders/src/grid_shader/: shader.frag  shader.vert
shaders/src/render_shader/: shader.frag  shader.vert
src/: CMakeLists.txt  app.cpp  main.cpp
src/cellmap/: CMakeLists.txt  cellmap.cpp  texture_backed_framebuffer.cpp
src/cli_emulator/: CMakeLists.txt  cellsim_cli_emulator.cpp  cli_emulator.cpp
src/imgui/: CMakeLists.txt  imgui_utils.cpp
src/renderer/: CMakeLists.txt  renderer.cpp
src/rules/: CMakeLists.txt  rule.cpp  rule_config.cpp  rule_info_window.cpp
src/shaders/: CMakeLists.txt  shaders.cpp
src/window/: CMakeLists.txt  window_glfw3.cpp
test/: CMakeLists.txt
test/imgui/: CMakeLists.txt  imgui_test.cpp
test/opengl_context/: CMakeLists.txt  opengl_context_test.cpp
