add_library(SHCONFIG INTERFACE)

target_compile_definitions(SHCONFIG
  INTERFACE
    GLVERSION_MAJOR=4
    GLVERSION_MINOR=5
    IN_POSITION_LOCATION=0
    VIEW_CONFIG_UBO_BINDING_LOCATION=0
    COLORS_UBO_BINDING_LOCATION=1
    INSTANCE_OFFSETS_SSBO_BINDING_LOCATION=3
    STATE_MAP_SSBO_BINDING_LOCATION=2
    BASE_CONFIG_UBO_BINDING_LOCATION=4
    CONFIG_UBO_BINDING_LOCATION=5
)
if(REMOTE_BUILD)
  add_custom_target(compile_and_copy_shaders_bin
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/bin ${CMAKE_CURRENT_BINARY_DIR}/bin
  )
else()
  if(UNIX AND NOT APPLE)
    set(COMPILE_SHADERS make -C ${CMAKE_CURRENT_SOURCE_DIR})
  else()
    set(COMPILE_SHADERS ninja -C ${CMAKE_CURRENT_SOURCE_DIR})
  endif()

  add_custom_target(compile_and_copy_shaders_bin
    COMMAND ${COMPILE_SHADERS}
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/bin ${CMAKE_CURRENT_BINARY_DIR}/bin
  )
endif()